--- a/settings.toml
+++ b/settings.toml
@@ -10,3 +10,16 @@ EXTENSIONS =[
     "backend.ext.migration:init_app",
     "backend.ext.docs_api:init_app"
 ]
+
+[testing]
+EXTENSIONS =[
+    "backend.ext.auth:init_app",
+    "backend.blueprints.resources:init_app",
+    "backend.ext.commands:init_app",
+    "backend.ext.cors:init_app",
+    "backend.ext.mail:init_app",
+    "backend.ext.base:init_app",
+    "backend.ext.serial:init_app",
+    "backend.ext.migration:init_app",
+    "backend.ext.docs_api:init_app"
+]
