--- a/.github/workflows/master_apieventosevenpi.yml
+++ b/.github/workflows/master_apieventosevenpi.yml
@@ -31,7 +31,9 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
+      - name: Run gunicord
+        run: gunicorn -w 4 -b 0.0.0.0 'backend.app:create_app()'
+
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
