alteado o banco para nuvem

--- a/.secrets.toml
+++ b/.secrets.toml
@@ -1,5 +1,5 @@
 [default]
-SQLALCHEMY_DATABASE_URI = "sqlite:///project.db"
+SQLALCHEMY_DATABASE_URI = "postgresql://pedropina:15975378pP!@evenpi.postgres.database.azure.com/postgres?sslmode=require"
 SECRET_KEY = "s321321321qsda2131!!SDASDe"
 JWT_SECRET_KEY = "7E451C1EB42EEA6DBC1A783AF5E1E"
 JWT_ACCESS_TOKEN_EXPIRES = 9999
