--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click==8.1.3
 colorama==0.4.6
 cssselect2==0.7.0
 dynaconf==3.1.12
+exceptiongroup==1.1.1
 flasgger==0.9.7.1
 Flask==2.2.3
 Flask-Cors==3.0.10
@@ -39,6 +40,8 @@ mistune==2.0.5
 packaging==23.0
 Pillow==9.5.0
 pluggy==1.0.0
+psycopg==3.1.9
+psycopg2-binary==2.9.1
 pydantic==1.10.7
 PyJWT==2.6.0
 pyrsistent==0.19.3
@@ -55,9 +58,8 @@ sqlparse==0.4.3
 starlette==0.26.1
 svglib==1.5.1
 tinycss2==1.2.1
+tomli==2.0.1
 typing_extensions==4.5.0
 tzdata==2023.2
 webencodings==0.5.1
 Werkzeug==2.2.3
-gunicorn
-psycopg2
